# QuPyt

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  Test1.py  kinetix_camera_sensor.py  pyproject.toml  requirements.txt
etc/: gitconfig  install-options.txt
qupyt/: __init__.py  _version.py  main.py  mixins.py  set_up.py
qupyt/hardware/: device_handler.py  power_supplies.py  sensors.py  signal_sources.py  synchronisers.py  visa_handler.py
qupyt/hardware/wrappers/: spinapi_adapted.py
qupyt/measurement_logic/: data_handling.py  run_measurement.py
qupyt/pulse_sequences/: SequenceDesigner.py  pulse_sequence_handler.py  yaml_sequence.py
qupyt/utils/: decorators.py
source/: conf.py  index.rst  measurement_specification.rst
source/api_reference/: api_reference.rst  device_handler.rst  power_supplies.rst  sensors.rst  signal_sources.rst  synchronisers.rst  visa_handler.rst
source/example_configs/: CASR_calibration_1.yaml  CASR_calibration_2.yaml  CASR_sensitivity.yaml  DAQ_sweep.yaml  ODMR.rst  ODMR.yaml  ODMR_cam.yaml  ODMR_cam_pulsesequence_sweep.yaml  ODMR_pd_daq.yaml  Rabi_pd_daq.yaml  esr.rst  esr.yaml  example_configs.rst  rabi.rst  rabi.yaml
source/example_pulse_sequences/: casr.py  casr_calibration.py  daq_sweep.py  esr.py  esr_ps.rst  example_pulse_sequences.rst  odmr.py  odmr.rst  odmr_cam.py  odmr_pd_daq.py  rabi.py  rabi_pd_daq.py  rabi_ps.rst
tests/measurement_logic/: test_data_handling.py
